# my_study_FastAPI

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  alembic.ini  ci.Dockerfile  dependencies.py  dev.Dockerfile  dev.docker-compose.yaml  docker-compose.yaml  main.py  pyproject.toml  pytest.ini  routers.py  schemas.py  test.docker-compose.yaml
frontend/: index.html
nginx/templates/: app.conf.template  dev.app.conf.template
repositories/: base.py  hotels.py  rooms.py
src/: config.py  database.py  exceptions.py  main.py  models.py  schemas.py
src/api/: dependencies.py  exceptions.py  routers.py
src/api/routers/: __init__.py  auth.py  bookings.py  facilities.py  hotels.py  images.py  rooms.py
src/background_tasks/celery/: app.py  tasks.py
src/bookings_study/: bootstrap.py  database.py  main.py
src/bookings_study/api/: examples.py  exceptions.py
src/bookings_study/migrations/: env.py
src/bookings_study/models/: __init__.py  bookings.py  facilities.py  hotels.py  rooms.py  users.py
src/connectors/: redis_connector.py
src/migrations/: env.py
src/models/: __init__.py  bookings.py  facilities.py  rooms.py  users.py
src/repositories/: base.py  bookings.py  exceptions.py  facilities.py  hotels.py  rooms.py  users.py
src/schemas/: base.py  bookings.py  facilities.py  hotels.py  relations.py  rooms.py  users.py
src/service/: auth.py  file_storage.py
src/services/: auth.py  bookings.py  exceptions.py  facilities.py  file_storage.py  hotels.py  rooms.py  utils.py
src/support_tables/: __init__.py  m2m.py
src/utils/: db_manager.py  file_manager.py  responses.py
tests/: conftest.py  mock_facilities.json  mock_hotels.json  mock_rooms.json  mock_users.json
tests/integration_tests/: test_auth.py
tests/unit_tests/: test_token.py
(+75 files in other folders)
